--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+abbr.eoc{
+	white-space: nowrap;
+}
+
 abbr.name{
 	white-space: nowrap;
 }
@@ -9,24 +13,27 @@ abbr.degree{
 	white-space: nowrap;
 }
 
+.visiting-card{
+	font-variant: all-small-caps;
+	text-align: center;
+}
+
 span[epub|type~="subtitle"]{
 	display: block;
 	font-weight: normal;
 }
 
-[epub|type~="z3998:letter"]{
-	margin-left: 0;
-	margin-right: 0;
-}
-
 [epub|type~="se:letter.dateline"]{
 	margin-top: 1em;
 	text-align: right;
-	font-style: italic;
 }
 
 [epub|type~="se:letter.dateline"] + p{
 	text-indent: 0;
+}
+
+[epub|type~="z3998:letter"] header{
+	margin-bottom: 1em;
 }
 
 [epub|type~="z3998:letter"] footer{
@@ -36,6 +43,7 @@ span[epub|type~="subtitle"]{
 [epub|type~="z3998:salutation"],
 [epub|type~="z3998:recipient"]{
 	font-variant: small-caps;
+	text-indent: 0;
 }
 
 [epub|type~="z3998:valediction"]{
