--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-.visiting-card{
+#chapter-9 blockquote{
 	font-variant: all-small-caps;
 	text-align: center;
 }
