Update CSS to use text-align: initial; in favor of text-align: left;

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -23,7 +23,7 @@
 
 [epub|type~="z3998:letter"] header{
 	margin-bottom: 1em;
-	text-align: left;
+	text-align: initial;
 }
 
 footer{
@@ -48,7 +48,7 @@ footer{
 
 [epub|type~="z3998:song"] p,
 [epub|type~="z3998:verse"] p{
-	text-align: left;
+	text-align: initial;
 	text-indent: 0;
 }
 
